# Copyright (c) 2022 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../webrtc.gni")

rtc_source_set("media_configuration") {
  visibility = [ "*" ]
  testonly = true
  sources = [
    "media_configuration.cc",
    "media_configuration.h",
  ]

  deps = [
    "../..:array_view",
    "../..:audio_options_api",
    "../..:audio_quality_analyzer_api",
    "../..:callfactory_api",
    "../..:fec_controller_api",
    "../..:frame_generator_api",
    "../..:function_view",
    "../..:libjingle_peerconnection_api",
    "../..:media_stream_interface",
    "../..:packet_socket_factory",
    "../..:peer_network_dependencies",
    "../..:rtp_parameters",
    "../..:simulated_network_api",
    "../..:stats_observer_interface",
    "../..:track_id_stream_info_map",
    "../..:video_quality_analyzer_api",
    "../../../modules/audio_processing:api",
    "../../../rtc_base:checks",
    "../../../rtc_base:rtc_base",
    "../../../rtc_base:stringutils",
    "../../../rtc_base:threading",
    "../../../test:fileutils",
    "../../../test:video_test_support",
    "../../../test/pc/e2e:video_dumping",
    "../../audio:audio_mixer_api",
    "../../rtc_event_log",
    "../../task_queue",
    "../../transport:network_control",
    "../../units:time_delta",
    "../../video_codecs:video_codecs_api",
    "../video:video_frame_writer",
  ]
  absl_deps = [
    "//third_party/abseil-cpp/absl/memory",
    "//third_party/abseil-cpp/absl/strings",
    "//third_party/abseil-cpp/absl/types:optional",
  ]
}
