# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../webrtc.gni")

rtc_source_set("rtp_source") {
  visibility = [ "*" ]
  sources = [ "rtp_source.h" ]
  deps = [
    "../../../api:rtp_headers",
    "../../../rtc_base:checks",
    "//third_party/abseil-cpp/absl/types:optional",
  ]
}

rtc_source_set("dependency_descriptor") {
  visibility = [ "*" ]
  sources = [ "dependency_descriptor.h" ]
  deps = [
    "//third_party/abseil-cpp/absl/container:inlined_vector",
    "//third_party/abseil-cpp/absl/types:optional",
  ]
}

rtc_source_set("rtp_packet_type") {
  visibility = [ "*" ]
  sources = [
    "rtp_packet_type.cc",
    "rtp_packet_type.h",
  ]
  deps = [
    "../../../api:array_view",
    "//third_party/abseil-cpp/absl/strings",
  ]
}

if (rtc_include_tests) {
  rtc_source_set("transport_rtp_unittests") {
    visibility = [ "*" ]
    testonly = true
    sources = [ "rtp_packet_type_unittest.cc" ]
    deps = [
      ":rtp_packet_type",
      "../../../test:test_support",
    ]
  }
}
