# Copyright (c) 2017 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../webrtc.gni")

rtc_static_library("bbr") {
  sources = [
    "bbr_network_controller.cc",
    "bbr_network_controller.h",
    "data_rate_calculator.cc",
    "data_rate_calculator.h",
    "include/bbr_factory.h",
    "rtt_stats.cc",
    "rtt_stats.h",
    "windowed_filter.h",
  ]

  if (rtc_enable_bwe_test_logging) {
    defines = [ "BWE_TEST_LOGGING_COMPILE_TIME_ENABLE=1" ]
  } else {
    defines = [ "BWE_TEST_LOGGING_COMPILE_TIME_ENABLE=0" ]
  }

  deps = [
    "../..:module_api",
    "../../..:webrtc_common",
    "../../../:typedefs",
    "../../../api:optional",
    "../../../logging:rtc_event_log_api",
    "../../../network_control",
    "../../../rtc_base:checks",
    "../../../rtc_base:rtc_base",
    "../../../rtc_base:rtc_base_approved",
    "../../../rtc_base:rtc_numerics",
    "../../../system_wrappers",
    "../../../system_wrappers:field_trial_api",
    "../../../system_wrappers:metrics_api",
    "../../rtp_rtcp:rtp_rtcp_format",
    "../../utility",
  ]
}
