# Copyright (c) 2018 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../webrtc.gni")

rtc_static_library("bbr") {
  sources = [
    "data_transfer_tracker.cc",
    "data_transfer_tracker.h",
    "rtt_stats.cc",
    "rtt_stats.h",
  ]

  deps = [
    "../../../rtc_base:checks",
    "../../../rtc_base:rtc_base_approved",
    "../network_control",
  ]
}

if (rtc_include_tests) {
  rtc_source_set("bbr_unittests") {
    testonly = true

    sources = [
      "data_transfer_tracker_unittest.cc",
      "rtt_stats_unittest.cc",
    ]
    deps = [
      ":bbr",
      "../../../test:test_support",
      "../network_control",
    ]
    if (!build_with_chromium && is_clang) {
      # Suppress warnings from the Chromium Clang plugin (bugs.webrtc.org/163).
      suppressed_configs += [ "//build/config/clang:find_bad_constructs" ]
    }
  }
}
