# Copyright (c) 2022 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../webrtc.gni")

rtc_library("codec_timer") {
  sources = [
    "codec_timer.cc",
    "codec_timer.h",
  ]
  deps = [ "../../../rtc_base:rtc_numerics" ]
}

rtc_library("rtt_filter") {
  sources = [
    "rtt_filter.cc",
    "rtt_filter.h",
  ]
  deps = [ "../../../api/units:time_delta" ]
  absl_deps = [
    "//third_party/abseil-cpp/absl/algorithm:container",
    "//third_party/abseil-cpp/absl/container:inlined_vector",
  ]
}

rtc_library("timing_unittests") {
  testonly = true
  sources = [ "rtt_filter_unittest.cc" ]

  deps = [
    ":rtt_filter",
    "../../../api/units:time_delta",
    "../../../test:test_support",
  ]
}
